Improved indications of mouse interactivity; fixed y ticks; added y axis shift to instructions

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -248,3 +248,15 @@ body{
   margin: auto;
   display: flex;
 }
+
+#yAxis {
+  cursor: row-resize;
+}
+
+#dragTarget {
+  cursor: crosshair;
+}
+
+#peakViz {
+  cursor: pointer;
+}
